# IoT

./: .gitignore  Activity Diagram - IoT.asta  CMakeLists.txt  Class diagram.asta  IoT.atsln  IoT.cproj  LoRaWANHandler.c  Temperature and Humidity Meaurement - SSD.asta  main.c
.github/workflows/: c-cpp.yml  cmake.yml
Debug/: Makefile  Semester4.elf  Semester4.hex  Semester4.lss  Semester4.map  Semester4.srec  main.d  makedep.mk
Debug/FreeRTOS/Example/: main.d
Headers/: CO2.h  Garage.h  Light.h  MotionSensor.h  Servo.h  Sound.h  TempAndHum.h
Implementations/: CO2Impl.c  LightImpl.c  MotionSensorImpl.c  ServoImpl.c  SoundImpl.c  TempAndHumImpl.c
System Sequence Diagram/: CO2 Measurment -  System Sequence Diagram.asta  Light Measurement -  System Sequence Diagram.asta
drivers/: hcSr501.h
src/: CMakeLists.txt  IoT.componentinfo.xml  IoT.cproj  LoRaWANHandler.c  main.c
src/Diagrams/: CO2 Measurment -  System Sequence Diagram.asta  Class Diagram.asta
src/Headers/: Alarm.h  Average.h  CO2.h  ExternBooleans.h  LED.h  Light.h  LoRaWAN.h  MotionSensor.h  Servo.h  Sound.h  TempAndHum.h  Threshold.h  hal.h
src/Implementations/: AlarmImpl.c  AverageImpl.c  CO2Impl.c  GarageImpl.c  LEDImpl.c  LightImpl.c  LoRaWANHandler.c  MotionSensorImpl.c  ServoImpl.c  SoundImpl.c  TempAndHumImpl.c  ThresholdImpl.c  hal.c
src/drivers/: hcSr501.h  hih8120.h  tsl2591.h
test/: CMakeLists.txt  CO2SensorTests.cpp  LightSensorTests.cpp  LoRaWANTests.cpp  MotionSensorTests.cpp  SoundTest.cpp  TemperatureAndHumidityTests.cpp
test/FreeRTOS_defs/: BooleanDeclarations.cpp  FreeRTOS_FFF_MocksDeclaration.h  FreeRTOS_FFF_MocksDefinitions.cpp  task.h
